2011-02-07  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/configitem.cpp: Escape newline chars in CDL
	values for display and in-cell editing. [ Bugzilla 1001144 ]
	* standalone/wxwin/mainwin.cpp, standalone/wxwin/configtool.cpp:
	Update copyright strings.

2010-09-10  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/configtooldoc.cpp: Allow import/export of
	eCos minimal configuration files with non-standard file suffixes.
	Based on patch from Ross Younger. [ Bugzilla 85580 ]

2010-02-17  John Dallaway  <john@dallaway.org.uk>

	* standalone/common/ecosconfig.cxx: Fix compilation on recent
	Cygwin hosts using NOMINMAX macro.

2009-11-17  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/packagesdlg.cpp: Fix the selection of a new
	package version in the packages dialog. [ Bugzilla 1000860 ]

2009-03-26  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/settingsdlg.cpp: Further tweaks to the widths of
	settings dialog widgets.

2009-03-23  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/settingsdlg.cpp: Tweak width of settings dialog
	widgets used for test connection parameters.

2009-03-03  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/configitem.cpp, standalone/wxwin/configitem.h:
	Initialise 'modifiable' member variable in alternative constructor.
	[ Bugzilla 1000705 ]

2009-02-27  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/configtooldoc.cpp: Limit backtrace length to 64 in
	case GDB fails to detect the thread entry point. [ Bugzilla 1000699 ]

2009-02-23  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/settingsdlg.cpp: Rationalise serial baud options.
	[ Bugzilla 1000687 ]

2009-02-16  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/mainwin.cpp: Tweak the conflicts status pane width.

	* standalone/wxwin/configtooldoc.cpp, standalone/wxwin/filename.cpp:
	Accommodate UNC file paths.

	* standalone/wxwin/propertywin.cpp, standalone/wxwin/conflictwin.cpp: