@@ -1,7 +1,7 @@
 // ####ECOSHOSTGPLCOPYRIGHTBEGIN####                                        
 // -------------------------------------------                              
 // This file is part of the eCos host tools.                                
-// Copyright (C) 1998, 1999, 2000, 2003, 2009 Free Software Foundation, Inc.      
+// Copyright (C) 1998, 1999, 2000, 2003, 2009, 2012 Free Software Foundation, Inc.      
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
@@ -26,6 +26,7 @@
 //        platform information implementation
 //
 //=================================================================
+#include <limits.h>
 #include "eCosTestPlatform.h"
 #include "eCosTestUtils.h"
 #include "eCosTrace.h"
